--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "grunt-contrib-nodeunit": "^4.0.0",
     "grunt-contrib-sass": "^2.0.0",
     "grunt-contrib-uglify": "^5.2.1",
+    "grunt-shell": "^4.0.0",
     "grunt-text-replace": "^0.4.0"
   }
 }
